Fixed contrast on subtitle

--- a/Intro-Screen/intro.css
+++ b/Intro-Screen/intro.css
@@ -279,8 +279,8 @@ body {
 .subtitle {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 100;
-  font-size: 0.8vw;
-  color: rgba(165, 141, 141, 0.4);
+  font-size: 1vw;
+  color: #fff;
   text-transform: uppercase;
   letter-spacing: 1em;
   text-align: center;
